--- a/package.json
+++ b/package.json
@@ -12,5 +12,7 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/color-mode": "^2.1.1"
+  }
 }
