--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
-    "@nuxtjs/color-mode": "^2.1.1"
+    "@nuxtjs/color-mode": "^2.1.1",
+    "sass": "^1.45.0",
+    "sass-loader": "^10.2.0",
+    "webpack": "^4.46.0"
   }
 }
